add functionality to get update and search type from DOM elements

--- a/public/update.html
+++ b/public/update.html
@@ -46,9 +46,9 @@
         <div class='container'>
             <div class='col-md-8 mx-auto mt-3'>
                 <div class="form-group">
-                    <label for="ref-input" id='ref-label'>Enter Current Song Title</label>
+                    <label for="ref-input" id='ref-label'>Enter Current Title</label>
                     <input type="text" class="form-control" id="ref-input">
-                    <label for="update-input" id='update-label'>Enter New Song Title</label>
+                    <label for="update-input" id='update-label'>Enter New Title</label>
                     <input type="text" class="form-control" id="update-input">
                 </div>
                 <button id='update-btn' type="submit" class="btn btn-warning text-light px-5">Update</button>
